# libfcs

./: CHANGELOG.md  LICENSE  README.md  libfcs.cabal  libfcs.def  stack.yaml
csrc/: FFI_stub.h  fcs.c  fcs.h
src/: FCS.hs  FCS.hsc
src/FCS/: FFI.hsc  Shim.hs
