name:                libfcs
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/meson800/libfcs#readme
license:             GPL-2.0
license-file:        LICENSE
author:              Christopher Johnstone
maintainer:          meson800@gmail.com
copyright:           2022 Christopher Johnstone
category:            Science
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     FCS
  build-depends:       base >= 4.7 && < 5,
                       ascii,
                       bytestring,
                       binary,
                       containers,
                       text,
                       time
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/meson800/libfcs
