name:                libfcs
version:             0.0.0.1
-- synopsis:
-- description:
homepage:            https://github.com/meson800/libfcs#readme
license:             GPL-2.0
license-file:        LICENSE
author:              Christopher Johnstone
maintainer:          meson800@gmail.com
copyright:           2022 Christopher Johnstone
category:            Science
build-type:          Simple
extra-source-files: 
  README.md
  CHANGELOG.md
cabal-version:       >=1.10

foreign-library libfcs
  type: native-shared

  if os(Windows)
    options:      standalone
    mod-def-file: libfcs.def
  
  other-modules:    FCS, FCS.Shim
  build-depends:    base >= 4.7 && < 5,
                    ascii,
                    bytestring,
                    binary,
                    containers,
                    co-log-core,
                    mtl,
                    text,
                    time,
                    matrix
  hs-source-dirs:   src
  c-sources:        csrc/fcs.c
  default-language: Haskell2010

library
  hs-source-dirs:      src
  exposed-modules:     FCS, FCS.Shim
  ghc-options: -Wall -Wcompat
  build-depends:       base >= 4.7 && < 5,
                       ascii,
                       bytestring,
                       binary,
                       containers,
                       co-log-core,
                       mtl,
                       text,
                       time,
                       matrix
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/meson800/libfcs
